--- a/src/pages/articles/markdown-news/1.en.md
+++ b/src/pages/articles/markdown-news/1.en.md
@@ -1,40 +1,40 @@
 
-This November, we will be traveling from China to Nuremberg, Germany, to attend SPS – Smart Production Solutions 2025. Known as the “Home of Automation,” SPS is one of the most prominent professional platforms in the European industrial automation sector. Every year, sensor manufacturers, bus and I/O system suppliers, PLC and control system providers, and software and industrial digitalization solution vendors from around the world gather here to showcase their technologies.
+<div style="text-align: justify;">This November, we will be traveling from China to Nuremberg, Germany, to attend SPS – Smart Production Solutions 2025. Known as the "Home of Automation," SPS is one of the most prominent professional platforms in the European industrial automation sector. Every year, sensor manufacturers, bus and I/O system suppliers, PLC and control system providers, and software and industrial digitalization solution vendors from around the world gather here to showcase their technologies.</div>
 
-For manufacturers of field-level devices, SPS serves both as a “weathervane” and an “observation room.” Here, one can observe the latest practices of local European OEMs and understand their real needs in field retrofitting, data acquisition, remote maintenance, and more. It’s also a valuable opportunity to engage in face-to-face discussions with engineers from various industries and hear firsthand feedback on topics like IO-Link, field I/O layout, and process monitoring.
+<div style="text-align: justify;">For manufacturers of field-level devices, SPS serves both as a "weathervane" and an "observation room." Here, one can observe the latest practices of local European OEMs and understand their real needs in field retrofitting, data acquisition, remote maintenance, and more. It's also a valuable opportunity to engage in face-to-face discussions with engineers from various industries and hear firsthand feedback on topics like IO-Link, field I/O layout, and process monitoring.</div>
 
-SENTINEL is not attending SPS merely to “display products,” but rather to focus on learning and benchmarking: bringing our refined IO-Link solutions from domestic projects to Nuremberg. On one hand, we aim to introduce our product line to the global stage; on the other, we hope to reflect on our own shortcomings through on-site interaction, so we can better serve future domestic and international projects.
+<div style="text-align: justify;">SENTINEL is not attending SPS merely to "display products," but rather to focus on learning and benchmarking: bringing our refined IO-Link solutions from domestic projects to Nuremberg. On one hand, we aim to introduce our product line to the global stage; on the other, we hope to reflect on our own shortcomings through on-site interaction, so we can better serve future domestic and international projects.</div>
 
 ## We Will Showcase Three Main Product Categories
 
-To facilitate communication on-site, we will prepare physical samples and brochures at our booth to systematically present the three core product categories featured in this exhibition.
+<div style="text-align: justify;">To facilitate communication on-site, we will prepare physical samples and brochures at our booth to systematically present the three core product categories featured in this exhibition.</div>
 
 ![](http://image.sentinel-china.com/202511201739557.png)
 
 The first category includes IO-Link modules: IO-Link masters, IO-Link hubs, and IO-Link converters.
-The IO-Link master is the central module connecting PLCs and IO-Link devices. It offers multiple IO-Link ports, supports parameter reading/writing and status diagnostics, and enables unified management of various IO-Link sensors and actuators within the existing control system. IO-Link hubs expand field I/O points and can connect to digital, analog, or IO-Link devices, allowing local signal aggregation and reducing wiring complexity. IO-Link converters transform traditional signals such as 4–20 mA, 0–10 V, Pt100, or thermocouples into IO-Link communication—retaining legacy wiring on one end while connecting as IO-Link devices on the other, supporting the gradual digitalization of legacy equipment.
+<div style="text-align: justify;">The IO-Link master is the central module connecting PLCs and IO-Link devices. It offers multiple IO-Link ports, supports parameter reading/writing and status diagnostics, and enables unified management of various IO-Link sensors and actuators within the existing control system. IO-Link hubs expand field I/O points and can connect to digital, analog, or IO-Link devices, allowing local signal aggregation and reducing wiring complexity. IO-Link converters transform traditional signals such as 4–20 mA, 0–10 V, Pt100, or thermocouples into IO-Link communication—retaining legacy wiring on one end while connecting as IO-Link devices on the other, supporting the gradual digitalization of legacy equipment.</div>
 
 ![](http://image.sentinel-china.com/202511201739195.png)
 
 The second category features process control sensors, mainly covering flow, pressure, and temperature measurements.
-Flow sensors measure both instantaneous and cumulative flow of liquids, with some models also integrating temperature sensing. These compact devices are ideal for direct pipe installation. Pressure sensors are available for a range of applications from low-pressure gas to medium and high-pressure hydraulic systems, with stainless steel connections and rugged housings suited for long-term operations. Temperature and combo-level/temperature sensors continuously monitor medium temperatures or tank levels. Some models support IO-Link communication, transmitting measurements, status, and parameters via a single interface—making system integration and maintenance more convenient.
+<div style="text-align: justify;">Flow sensors measure both instantaneous and cumulative flow of liquids, with some models also integrating temperature sensing. These compact devices are ideal for direct pipe installation. Pressure sensors are available for a range of applications from low-pressure gas to medium and high-pressure hydraulic systems, with stainless steel connections and rugged housings suited for long-term operations. Temperature and combo-level/temperature sensors continuously monitor medium temperatures or tank levels. Some models support IO-Link communication, transmitting measurements, status, and parameters via a single interface—making system integration and maintenance more convenient.</div>
 
 ![](http://image.sentinel-china.com/202511201739263.png)
 
 The third category is our newly launched product of the year: IO-Link relay modules.
-These modules control multiple relay outputs through a single IO-Link interface. Each output is a single-pole double-throw contact, providing both normally open and normally closed terminals for flexible logic configuration. The modules support expansion via dedicated relay add-on modules, maintaining DIN rail mounting and screw terminal wiring, while scaling output circuits in groups. Through the IO-Link channel, users can centrally control each relay and obtain status information—offering a more manageable and maintainable alternative to traditional decentralized relay arrays.
+<div style="text-align: justify;">These modules control multiple relay outputs through a single IO-Link interface. Each output is a single-pole double-throw contact, providing both normally open and normally closed terminals for flexible logic configuration. The modules support expansion via dedicated relay add-on modules, maintaining DIN rail mounting and screw terminal wiring, while scaling output circuits in groups. Through the IO-Link channel, users can centrally control each relay and obtain status information—offering a more manageable and maintainable alternative to traditional decentralized relay arrays.</div>
 
-At the exhibition, we will combine physical samples and graphical displays to showcase these three product categories. Attendees can directly inspect the samples and refer to simplified topology diagrams and specifications, helping visitors from different backgrounds quickly understand our products and ask relevant questions based on their applications.
+<div style="text-align: justify;">At the exhibition, we will combine physical samples and graphical displays to showcase these three product categories. Attendees can directly inspect the samples and refer to simplified topology diagrams and specifications, helping visitors from different backgrounds quickly understand our products and ask relevant questions based on their applications.</div>
 
 ## Summary and Booth Info: Join Us in Nuremberg to Explore Field Automation
 
-For SENTINEL, the SPS journey is a “problem-driven and insight-focused” trip. Through our IO-Link modules, process control sensors, and IO-Link relay modules, we hope to clearly present our product layout for the field level. We also look forward to hearing real voices from various industries at the booth, which will help us make more application-driven decisions in future product planning.
+<div style="text-align: justify;">For SENTINEL, the SPS journey is a "problem-driven and insight-focused" trip. Through our IO-Link modules, process control sensors, and IO-Link relay modules, we hope to clearly present our product layout for the field level. We also look forward to hearing real voices from various industries at the booth, which will help us make more application-driven decisions in future product planning.</div>
 
-You are warmly invited to visit our booth and explore collaboration:
+<div style="text-align: justify;">You are warmly invited to visit our booth and explore collaboration:</div>
 
 📌 **Exhibition Name:** SPS – Smart Production Solutions 2025
 📅 **Exhibition Date:** November 25–27, 2025
 📍 **Venue:** NürnbergMesse, Nuremberg, Germany
 🎪 **SENTINEL Booth Number:** 4A-475
 
-If you're planning a trip to Nuremberg, we welcome you to visit us at booth 4A-475 for face-to-face discussions. If you're unable to attend, stay tuned for our post-show reports, where we will share more insights and observations from the SPS floor.
+<div style="text-align: justify;">If you're planning a trip to Nuremberg, we welcome you to visit us at booth 4A-475 for face-to-face discussions. If you're unable to attend, stay tuned for our post-show reports, where we will share more insights and observations from the SPS floor.</div>
