--- a/src/pages/articles/markdown-news/1.it.md
+++ b/src/pages/articles/markdown-news/1.it.md
@@ -1,40 +1,40 @@
 
-Questo novembre, viaggeremo dalla Cina a Norimberga, Germania, per partecipare a SPS – Smart Production Solutions 2025. Conosciuta come "La casa dell'automazione", SPS è una delle più importanti piattaforme professionali nel settore dell'automazione industriale europea. Ogni anno, produttori di sensori, fornitori di sistemi bus e I/O, fornitori di PLC e sistemi di controllo, nonché venditori di software e soluzioni di digitalizzazione industriale provenienti da tutto il mondo si riuniscono qui per mostrare le loro tecnologie.
+<div style="text-align: justify;">Questo novembre, viaggeremo dalla Cina a Norimberga, Germania, per partecipare a SPS – Smart Production Solutions 2025. Conosciuta come "La casa dell'automazione", SPS è una delle più importanti piattaforme professionali nel settore dell'automazione industriale europea. Ogni anno, produttori di sensori, fornitori di sistemi bus e I/O, fornitori di PLC e sistemi di controllo, nonché venditori di software e soluzioni di digitalizzazione industriale provenienti da tutto il mondo si riuniscono qui per mostrare le loro tecnologie.</div>
 
-Per i produttori di dispositivi a livello di campo, SPS funge sia da "bandierina meteorologica" che da "sala di osservazione". Qui, è possibile osservare le ultime pratiche dei produttori OEM locali europei e capire le loro reali esigenze nella retrofitting di campo, acquisizione di dati, manutenzione remota e altro ancora. È anche un'opportunità preziosa per partecipare a discussioni faccia a faccia con ingegneri di varie industrie e ascoltare feedback diretti su argomenti come IO-Link, layout di I/O di campo e monitoraggio dei processi.
+<div style="text-align: justify;">Per i produttori di dispositivi a livello di campo, SPS funge sia da "bandierina meteorologica" che da "sala di osservazione". Qui, è possibile osservare le ultime pratiche dei produttori OEM locali europei e capire le loro reali esigenze nella retrofitting di campo, acquisizione di dati, manutenzione remota e altro ancora. È anche un'opportunità preziosa per partecipare a discussioni faccia a faccia con ingegneri di varie industrie e ascoltare feedback diretti su argomenti come IO-Link, layout di I/O di campo e monitoraggio dei processi.</div>
 
-SENTINEL non partecipa a SPS semplicemente per "mostrare prodotti", ma piuttosto si concentra sull'apprendimento e sul confronto: portare le nostre soluzioni IO-Link rafforzate da progetti nazionali a Norimberga. Da un lato, our obiettivo è presentare la nostra gamma di prodotti sul palcoscenico mondiale; dall'altro, speriamo di riflettere sulle nostre lacune attraverso l'interazione sul posto, affinché possiamo servire meglio i futuri progetti nazionali e internazionali.
+<div style="text-align: justify;">SENTINEL non partecipa a SPS semplicemente per "mostrare prodotti", ma piuttosto si concentra sull'apprendimento e sul confronto: portare le nostre soluzioni IO-Link rafforzate da progetti nazionali a Norimberga. Da un lato, our obiettivo è presentare la nostra gamma di prodotti sul palcoscenico mondiale; dall'altro, speriamo di riflettere sulle nostre lacune attraverso l'interazione sul posto, affinché possiamo servire meglio i futuri progetti nazionali e internazionali.</div>
 
 ## Mostreremo tre categorie principali di prodotti
 
-Per facilitare la comunicazione on-site, prepareremo campioni fisici e opuscoli nel nostro stand per presentare in modo sistematico le tre categorie core di prodotti in mostra in questa esposizione.
+<div style="text-align: justify;">Per facilitare la comunicazione on-site, prepareremo campioni fisici e opuscoli nel nostro stand per presentare in modo sistematico le tre categorie core di prodotti in mostra in questa esposizione.</div>
 
 ![](http://image.sentinel-china.com/202511201739557.png)
 
 La prima categoria include moduli IO-Link: master IO-Link, hub IO-Link e convertitori IO-Link.
-Il master IO-Link è il modulo centrale che connette i PLC e i dispositivi IO-Link. Offre più porte IO-Link, supporta la lettura/scrittura di parametri e la diagnostica dello stato, e consente la gestione unificata di vari sensori e attuatori IO-Link all'interno del sistema di controllo esistente. Gli hub IO-Link espandono i punti I/O sul campo e possono connettersi a dispositivi digitali, analogici o IO-Link, consentendo l'aggregazione locale dei segnali e riducendo la complessità del cablaggio. I convertitori IO-Link trasformano segnali tradizionali come 4–20 mA, 0–10 V, Pt100 o termocoppie in comunicazione IO-Link—mantenendo il cablaggio legacy su un lato mentre si connettono come dispositivi IO-Link sull'altro, supportando la digitalizzazione graduale delle apparecchiature legacy.
+<div style="text-align: justify;">Il master IO-Link è il modulo centrale che connette i PLC e i dispositivi IO-Link. Offre più porte IO-Link, supporta la lettura/scrittura di parametri e la diagnostica dello stato, e consente la gestione unificata di vari sensori e attuatori IO-Link all'interno del sistema di controllo esistente. Gli hub IO-Link espandono i punti I/O sul campo e possono connettersi a dispositivi digitali, analogici o IO-Link, consentendo l'aggregazione locale dei segnali e riducendo la complessità del cablaggio. I convertitori IO-Link trasformano segnali tradizionali come 4–20 mA, 0–10 V, Pt100 o termocoppie in comunicazione IO-Link—mantenendo il cablaggio legacy su un lato mentre si connettono come dispositivi IO-Link sull'altro, supportando la digitalizzazione graduale delle apparecchiature legacy.</div>
 
 ![](http://image.sentinel-china.com/202511201739195.png)
 
 La seconda categoria include sensori di controllo di processo, che coprono principalmente misurazioni di flusso, pressione e temperatura.
-I sensori di flusso misurano sia il flusso istantaneo che quello cumulativo dei liquidi, con alcuni modelli che integrano anche la rilevazione della temperatura. Questi dispositivi compatti sono ideali per l'installazione diretta sulle tubazioni. I sensori di pressione sono disponibili per una gamma di applicazioni, dalla gas a bassa pressione ai sistemi idraulici a pressione media e alta, con connessioni in acciaio inox e alloggi robusti adatti per operazioni a lungo termine. I sensori di temperatura e i sensori combinati livello/temperatura monitorano continuamente le temperature del mezzo o i livelli dei serbatoi. Alcuni modelli supportano la comunicazione IO-Link, trasmettendo misurazioni, stato e parametri tramite un singolo'interfaccia, rendendo l'integrazione e la manutenzione del sistema più convenienti.
+<div style="text-align: justify;">I sensori di flusso misurano sia il flusso istantaneo che quello cumulativo dei liquidi, con alcuni modelli che integrano anche la rilevazione della temperatura. Questi dispositivi compatti sono ideali per l'installazione diretta sulle tubazioni. I sensori di pressione sono disponibili per una gamma di applicazioni, dalla gas a bassa pressione ai sistemi idraulici a pressione media e alta, con connessioni in acciaio inox e alloggi robusti adatti per operazioni a lungo termine. I sensori di temperatura e i sensori combinati livello/temperatura monitorano continuamente le temperature del mezzo o i livelli dei serbatoi. Alcuni modelli supportano la comunicazione IO-Link, trasmettendo misurazioni, stato e parametri tramite un singolo'interfaccia, rendendo l'integrazione e la manutenzione del sistema più convenienti.</div>
 
 ![](http://image.sentinel-china.com/202511201739263.png)
 
 La terza categoria è il nostro nuovo prodotto lanciato quest'anno: moduli relè IO-Link.
-Questi moduli controllano più uscite relè tramite un singolo'interfaccia IO-Link. Ogni uscita è un contatto monopolo bipolare, fornendo terminali sia aperti che chiusi normalmente per una configurazione logica flessibile. I moduli supportano l'espansione tramite moduli aggiuntivi relè dedicati, mantenendo il montaggio su binario DIN e il cablaggio con terminali a vite,同时以组为单位扩展输出电路。Attraverso il canale IO-Link, gli utenti possono controllare centralmente ogni relè e ottenere informazioni sullo stato, offrendo un'alternativa più gestibile e mantenibile rispetto alle tradizionali matrici di relè decentrate.
+<div style="text-align: justify;">Questi moduli controllano più uscite relè tramite un singolo'interfaccia IO-Link. Ogni uscita è un contatto monopolo bipolare, fornendo terminali sia aperti che chiusi normalmente per una configurazione logica flessibile. I moduli supportano l'espansione tramite moduli aggiuntivi relè dedicati, mantenendo il montaggio su binario DIN e il cablaggio con terminali a vite,同时以组为单位扩展输出电路。Attraverso il canale IO-Link, gli utenti possono controllare centralmente ogni relè e ottenere informazioni sullo stato, offrendo un'alternativa più gestibile e mantenibile rispetto alle tradizionali matrici di relè decentrate.</div>
 
-Alla fiera, presenteremo queste tre categorie di prodotti combinando campioni fisici e display grafici. I partecipanti potranno ispezionare direttamente i campioni e fare riferimento a diagrammi topologici semplificati e specifiche, aiutando i visitatori di diversa provenienza a capire rapidamente i nostri prodotti e a porre domande rilevanti in base alle loro applicazioni.
+<div style="text-align: justify;">Alla fiera, presenteremo queste tre categorie di prodotti combinando campioni fisici e display grafici. I partecipanti potranno ispezionare direttamente i campioni e fare riferimento a diagrammi topologici semplificati e specifiche, aiutando i visitatori di diversa provenienza a capire rapidamente i nostri prodotti e a porre domande rilevanti in base alle loro applicazioni.</div>
 
 ## Riassunto e informazioni sullo stand: Unisciti a noi a Norimberga per esplorare l'automazione di campo
 
-Per SENTINEL, il viaggio SPS è un viaggio "guidato da problemi e incentrato sulle informazioni". Attraverso i nostri moduli IO-Link, i sensori di controllo di processo e i moduli relè IO-Link, speriamo di presentare chiaramente la nostra disposizione dei prodotti per il livello di campo. Inoltre, aspettiamo con impatienza di sentire voci reali da varie industrie allo stand, il che ci aiuterà a prendere decisioni più basate sulle applicazioni nella pianificazione futura dei prodotti.
+<div style="text-align: justify;">Per SENTINEL, il viaggio SPS è un viaggio "guidato da problemi e incentrato sulle informazioni". Attraverso i nostri moduli IO-Link, i sensori di controllo di processo e i moduli relè IO-Link, speriamo di presentare chiaramente la nostra disposizione dei prodotti per il livello di campo. Inoltre, aspettiamo con impatienza di sentire voci reali da varie industrie allo stand, il che ci aiuterà a prendere decisioni più basate sulle applicazioni nella pianificazione futura dei prodotti.</div>
 
-Vi invitiamo calorosamente a visitare il nostro stand e a esplorare collaborazioni:
+<div style="text-align: justify;">Vi invitiamo calorosamente a visitare il nostro stand e a esplorare collaborazioni:</div>
 
 📌 **Nome della mostra:** SPS – Smart Production Solutions 2025
 📅 **Data dell'esposizione:** 25-27 novembre 2025
 📍 **Luogo:** NürnbergMesse, Norimberga, Germania
 🎪 **Numero del padiglione SENTINEL:** 4A-475
 
-Se stai pianificando un viaggio a Norimberga, ti invitiamo a visitarci al padiglione 4A-475 per discutere di persona. Se non puoi partecipare, rimani sintonizzato sulle nostre relazioni post-evento, dove condivideremo più approfondimenti e osservazioni dal pavimento della SPS.
+<div style="text-align: justify;">Se stai pianificando un viaggio a Norimberga, ti invitiamo a visitarci al padiglione 4A-475 per discutere di persona. Se non puoi partecipare, rimani sintonizzato sulle nostre relazioni post-evento, dove condivideremo più approfondimenti e osservazioni dal pavimento della SPS.</div>
