--- a/src/pages/articles/markdown-news/2.en.md
+++ b/src/pages/articles/markdown-news/2.en.md
@@ -1,56 +1,56 @@
 
-In automated industrial sites, relay modules are among the most common yet easily overlooked components. They are responsible for switching operations, signal switching, and interlock control—almost every piece of equipment and every production line cannot function without them. However, in traditional practices, relay modules often consume the most manual labor: each additional output channel means one more wire, a pair of terminals, and a wiring diagram. For a workstation with dozens of signal channels and hundreds of terminals, wiring workers have to spend an entire day; maintenance personnel need to use a multimeter to test each connection for continuity one by one, and verify the PLC addresses against the relay numbers.
+<div style="text-align: justify;">In automated industrial sites, relay modules are among the most common yet easily overlooked components. They are responsible for switching operations, signal switching, and interlock control—almost every piece of equipment and every production line cannot function without them. However, in traditional practices, relay modules often consume the most manual labor: each additional output channel means one more wire, a pair of terminals, and a wiring diagram. For a workstation with dozens of signal channels and hundreds of terminals, wiring workers have to spend an entire day; maintenance personnel need to use a multimeter to test each connection for continuity one by one, and verify the PLC addresses against the relay numbers.</div>
 
-Nowadays, with labor costs rising year by year, this "wiring method that relies on piling up people" is obviously unsustainable. Therefore, a new idea is being adopted by more engineers.——**Enable relay modules to also connect to IO-Link, completely simplifying wiring and debugging.**
+<div style="text-align: justify;">Nowadays, with labor costs rising year by year, this "wiring method that relies on piling up people" is obviously unsustainable. Therefore, a new idea is being adopted by more engineers.——**Enable relay modules to also connect to IO-Link, completely simplifying wiring and debugging.**</div>
 
 ## Turn "relay" into a system
 
-IO-Link is a point-to-point intelligent communication standard, which was mainly used for sensors in the past. However, when it is applied to relay modules, the changes it brings are far beyond imagination. Sentinel's **IO-Link relay module series** (main module SIOL-TL-16RM1S paired with expansion modules REX-8R1S / REX-16R1S) allows engineers to centrally control up to 16 channels or even hundreds of channels of relays with just one IO-Link communication line.
+<div style="text-align: justify;">IO-Link is a point-to-point intelligent communication standard, which was mainly used for sensors in the past. However, when it is applied to relay modules, the changes it brings are far beyond imagination. Sentinel's **IO-Link relay module series** (main module SIOL-TL-16RM1S paired with expansion modules REX-8R1S / REX-16R1S) allows engineers to centrally control up to 16 channels or even hundreds of channels of relays with just one IO-Link communication line.
 
-This means: there is no longer a need to repeatedly strip wires and crimp terminals in the control cabinet; there is no longer a need to redraw wiring diagrams every time a new workstation is added; and there is no longer a need to manually check which circuit corresponds to which output. Simply install the module on the guide rail, connect the M12 communication cable and power supply, and the entire relay system can automatically identify and start working.**Relay control has now entered the era of "plug and play".**
+This means: there is no longer a need to repeatedly strip wires and crimp terminals in the control cabinet; there is no longer a need to redraw wiring diagrams every time a new workstation is added; and there is no longer a need to manually check which circuit corresponds to which output. Simply install the module on the guide rail, connect the M12 communication cable and power supply, and the entire relay system can automatically identify and start working.**Relay control has now entered the era of "plug and play".**</div>
 
 ## Modular structure, faster and more worry-free installation
 ![](http://image.sentinel-china.com/1655452.png)
 
-**SIOL-TL-16RM1S Main Module** serves as the core of the system, responsible for receiving output commands from the IO-Link master station and driving 16 relay coils. The module is installed on a DIN rail, has an IP20 protection rating, and is equipped with operation and power indicators.
+<div style="text-align: justify;">**SIOL-TL-16RM1S Main Module** serves as the core of the system, responsible for receiving output commands from the IO-Link master station and driving 16 relay coils. The module is installed on a DIN rail, has an IP20 protection rating, and is equipped with operation and power indicators.</div>
 
 ![](http://image.sentinel-china.com/1655451.png)
 
-**REX-8R1S / REX-16R1S expansion modules** are connected to the main module via a dedicated cable, enabling flexible expansion of 8 or 16 output points. They adopt the same guide rail structure and plug-in terminal design, facilitating quick wiring and maintenance, and are compatible with common relays such as Omron, Idec, Hongfa, and Dynex. During installation, there is no need for separate wiring or labeling; the entire output system can be assembled simply by following the steps: "connect to the main module → plug in the expansion module → plug in the relay". For customers with tight project schedules and frequent production line switches, this **standardized and modular** approach can significantly shorten the delivery time.
+<div style="text-align: justify;">**REX-8R1S / REX-16R1S expansion modules** are connected to the main module via a dedicated cable, enabling flexible expansion of 8 or 16 output points. They adopt the same guide rail structure and plug-in terminal design, facilitating quick wiring and maintenance, and are compatible with common relays such as Omron, Idec, Hongfa, and Dynex. During installation, there is no need for separate wiring or labeling; the entire output system can be assembled simply by following the steps: "connect to the main module → plug in the expansion module → plug in the relay". For customers with tight project schedules and frequent production line switches, this **standardized and modular** approach can significantly shorten the delivery time.</div>
 
 ## The threefold value of saving labor
 
 ### 1.More labor-saving in installation
 
-In traditional solutions, the PLC output and the relay need to be connected through multiple sections of cables. Each signal requires manual wire stripping, crimping, numbering, and testing. A control cabinet with hundreds of wires is not only time-consuming but also highly prone to errors. However, with the IO-Link relay module, only one IO-Link communication cable, a set of centralized power input, and a rail-mounted clip installation are needed. Installation man-hours can be reduced by **40% to 60%**, and the amount of wiring can be reduced by more than **70%**. Fewer terminals and fewer connections mean less labor input and higher reliability.
+<div style="text-align: justify;">In traditional solutions, the PLC output and the relay need to be connected through multiple sections of cables. Each signal requires manual wire stripping, crimping, numbering, and testing. A control cabinet with hundreds of wires is not only time-consuming but also highly prone to errors. However, with the IO-Link relay module, only one IO-Link communication cable, a set of centralized power input, and a rail-mounted clip installation are needed. Installation man-hours can be reduced by **40% to 60%**, and the amount of wiring can be reduced by more than **70%**. Fewer terminals and fewer connections mean less labor input and higher reliability.</div>
 
 ### 2.Debugging is easier
 
-In traditional wiring, commissioning engineers often need to check one by one against the wiring diagram: "Which relay does PLC Q0.3 correspond to?" and "Which load does relay K17 control exactly?" The IO-Link relay module standardizes all of this. The main module has a fixed 16-bit output sequence, and the expansion modules automatically increment by address, with each channel equipped with an independent LED indicator. During testing, it is only necessary to send an output signal from the PLC to quickly confirm whether the corresponding channel is operating through the module panel. There is no need for repeated wire testing or number labeling.**The speed of debugging is increased, and the error rate is reduced. This is the second meaning of "saving labor".**
+<div style="text-align: justify;">In traditional wiring, commissioning engineers often need to check one by one against the wiring diagram: "Which relay does PLC Q0.3 correspond to?" and "Which load does relay K17 control exactly?" The IO-Link relay module standardizes all of this. The main module has a fixed 16-bit output sequence, and the expansion modules automatically increment by address, with each channel equipped with an independent LED indicator. During testing, it is only necessary to send an output signal from the PLC to quickly confirm whether the corresponding channel is operating through the module panel. There is no need for repeated wire testing or number labeling.**The speed of debugging is increased, and the error rate is reduced. This is the second meaning of "saving labor".**</div>
 
 ### 3.Maintenance is more efficient
 
-Relays are high-frequency action components, and on-site replacement is a common occurrence. In traditional control cabinets, replacing a relay often requires re-wiring and re-testing. However, in the IO-Link relay module system, both the modules and the bases have standardized structures, allowing for plug-and-play replacement without affecting the operation of other channels. When there is an expansion requirement, it is only necessary to add a REX module without modifying the original wiring. Engineers can spend more time on system optimization rather than mechanical repetitive work. This is the third layer of "labor saving":**Let people do more valuable things.**
+<div style="text-align: justify;">Relays are high-frequency action components, and on-site replacement is a common occurrence. In traditional control cabinets, replacing a relay often requires re-wiring and re-testing. However, in the IO-Link relay module system, both the modules and the bases have standardized structures, allowing for plug-and-play replacement without affecting the operation of other channels. When there is an expansion requirement, it is only necessary to add a REX module without modifying the original wiring. Engineers can spend more time on system optimization rather than mechanical repetitive work. This is the third layer of "labor saving":**Let people do more valuable things.**</div>
 
 ## Applicable scenarios: What is saved is more than just working hours
 ![](http://image.sentinel-china.com/1655453.png)
 
-Whether it is the construction of new lines or the renovation of old lines, IO-Link relay modules can significantly reduce labor input.
+<div style="text-align: justify;">Whether it is the construction of new lines or the renovation of old lines, IO-Link relay modules can significantly reduce labor input.
 When adding a new workstation, signal access can be completed simply by expanding the module; in **renovation projects**, there is no need to replace the PLC, and "intelligent wiring" of the relay system can be quickly achieved just by adding an IO-Link master station.
 
-All of this has only one purpose: **To make the control system simpler and engineers more efficient**.
+All of this has only one purpose: **To make the control system simpler and engineers more efficient**.</div>
 
 ## Summary: Make engineers' time more valuable
 
-Saving labor is not just about saving a few hours of wiring time; it's about enabling faster project delivery, easier maintenance, and more flexible modifications. Sentinel's IO-Link relay module series is becoming the "first choice for labor saving" in more and more automation projects. The modular structure allows for quicker installation, with a single communication line capable of managing hundreds of output channels; it is compatible with multi-brand relays and supports the IO-Link V1.1 master station standard.
+<div style="text-align: justify;">Saving labor is not just about saving a few hours of wiring time; it's about enabling faster project delivery, easier maintenance, and more flexible modifications. Sentinel's IO-Link relay module series is becoming the "first choice for labor saving" in more and more automation projects. The modular structure allows for quicker installation, with a single communication line capable of managing hundreds of output channels; it is compatible with multi-brand relays and supports the IO-Link V1.1 master station standard.
 
-In the era of "intelligent manufacturing", every hour of human effort is extremely precious. Making relays "smart" means allowing engineers to spend their time on more valuable things.
+In the era of "intelligent manufacturing", every hour of human effort is extremely precious. Making relays "smart" means allowing engineers to spend their time on more valuable things.</div>
 
 
 ### Customer Support and Service
 
-If you want to learn more about Sentinel products, please contact the sales staff or call the company at **+86 022-83726972**. Alternatively, you can log on to Sentinel's official website[www.sentinel-china.com](http://www.sentinel-china.com) . The official website provides comprehensive product information, selection manuals, CAD and Eplan files, as well as configuration files and tutorials, ensuring that users can easily obtain the required information.
+<div style="text-align: justify;">If you want to learn more about Sentinel products, please contact the sales staff or call the company at **+86 022-83726972**. Alternatively, you can log on to Sentinel's official website[www.sentinel-china.com](http://www.sentinel-china.com) . The official website provides comprehensive product information, selection manuals, CAD and Eplan files, as well as configuration files and tutorials, ensuring that users can easily obtain the required information.
 
-We have a professional technical team, ready to provide customized customer support and efficient after-sales service, ensuring that the interests of every user are maximized.
+We have a professional technical team, ready to provide customized customer support and efficient after-sales service, ensuring that the interests of every user are maximized.</div>
 
 ![](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
