--- a/src/pages/articles/markdown-news/3.es.md
+++ b/src/pages/articles/markdown-news/3.es.md
@@ -7,71 +7,71 @@ A diferencia de la destilación a presión atmosférica, que puede degradar la c
 - **Industria alimentaria:** extracción de aceites esenciales, concentración de jugos, eliminación de humedad.
 - **Industria farmacéutica:** extracción de ingredientes activos, separación de impurezas, concentración de soluciones farmacéuticas.
 
-Ejemplo: En la extracción de **fragancias naturales**, la destilación a presión negativa preserva el aroma original y los compuestos activos. En farmacia, el procesamiento a baja temperatura garantiza la **eficacia** y la **pureza** de los fármacos.
+<div style="text-align: justify;">Ejemplo: En la extracción de **fragancias naturales**, la destilación a presión negativa preserva el aroma original y los compuestos activos. En farmacia, el procesamiento a baja temperatura garantiza la **eficacia** y la **pureza** de los fármacos.</div>
 
 ![Equipo de destilación a presión negativa](http://image.sentinel-china.com/202410242248851.png)
 
 ### Principio de funcionamiento de la destilación a presión negativa
 
-La destilación a presión negativa reduce la presión del sistema, lo que permite que los líquidos **se evaporen por debajo de su punto de ebullición normal**.
+<div style="text-align: justify;">La destilación a presión negativa reduce la presión del sistema, lo que permite que los líquidos **se evaporen por debajo de su punto de ebullición normal**.
 
 **Pasos del proceso:**
 1. **Configuración del sistema de vacío**: La bomba de vacío reduce la presión a miles de Pascales o menos.
 2. **Calentamiento del material**: Los líquidos se evaporan a una temperatura reducida.
 3. **Condensación del vapor**: El gas evaporado se enfría en un condensador y se convierte nuevamente en líquido.
-4. **Recolección del producto**: Se recoge el líquido condensado, lo que produce una **separación de alta pureza**.
+4. **Recolección del producto**: Se recoge el líquido condensado, lo que produce una **separación de alta pureza**.</div>
 
 ## Sensores de presión: El núcleo de la destilación a presión negativa
 
 ### Rol en el sistema
-Los sensores de presión garantizan **condiciones de vacío estables**, lo que afecta directamente:
+<div style="text-align: justify;">Los sensores de presión garantizan **condiciones de vacío estables**, lo que afecta directamente:
 - Eficiencia de la destilación
 - Pureza del producto
 - Retención de ingredientes activos
 
-Incluso pequeñas fluctuaciones de presión pueden comprometer el **sabor de los alimentos** o la **calidad de los fármacos**.
+Incluso pequeñas fluctuaciones de presión pueden comprometer el **sabor de los alimentos** o la **calidad de los fármacos**.</div>
 
 ### Retroalimentación de datos en tiempo real
-Al conectarse a un sistema de control, los sensores de presión:
+<div style="text-align: justify;">Al conectarse a un sistema de control, los sensores de presión:
 - Ajustan el funcionamiento de la bomba de vacío
 - Mantienen la presión dentro del rango objetivo
 - Reducen los costos de mantenimiento
-- Alargan la vida útil del equipo
+- Alargan la vida útil del equipo</div>
 
 ## Sensores de presión negativa de grado alimentario y farmacéutico SENTINEL
 
 ![Sensor de presión negativa SENTINEL](http://image.sentinel-china.com/1755451.png)
 
 ### Acero inoxidable 316L para higiene
-- Alta resistencia a la corrosión  
+<div style="text-align: justify;">- Alta resistencia a la corrosión  
 - Propiedades antibacterianas  
-- Cumplimiento de **estándares de saneamiento estrictos** para la producción alimentaria y farmacéutica
+- Cumplimiento de **estándares de saneamiento estrictos** para la producción alimentaria y farmacéutica</div>
 
 ### Diseño compacto
-- Tamaño reducido  
-- Fácil integración en sistemas tanto **a gran escala** como **a escala de laboratorio**
+<div style="text-align: justify;">- Tamaño reducido  
+- Fácil integración en sistemas tanto **a gran escala** como **a escala de laboratorio**</div>
 
 ### IO-Link integrado
-- **Comunicación bidireccional** para datos en tiempo real, configuración remota y diagnóstico  
+<div style="text-align: justify;">- **Comunicación bidireccional** para datos en tiempo real, configuración remota y diagnóstico  
 - Permite **monitoreo inteligente** y **mantenimiento predictivo**  
-- Mayor velocidad de respuesta y mayor precisión que los sensores tradicionales
+- Mayor velocidad de respuesta y mayor precisión que los sensores tradicionales</div>
 
 ## Conclusión
 
-La destilación a presión negativa es esencial en la producción **alimentaria** y **farmacéutica**, y el **control preciso de la presión** es fundamental.  
-Los sensores de presión negativa de SENTINEL combinan **precisión**, **diseño higiénico** y **funcionalidad inteligente**, ofreciendo una solución **económica** y **fiable** para mejorar la eficiencia y mantener una alta calidad del producto.
+<div style="text-align: justify;">La destilación a presión negativa es esencial en la producción **alimentaria** y **farmacéutica**, y el **control preciso de la presión** es fundamental.  
+Los sensores de presión negativa de SENTINEL combinan **precisión**, **diseño higiénico** y **funcionalidad inteligente**, ofreciendo una solución **económica** y **fiable** para mejorar la eficiencia y mantener una alta calidad del producto.</div>
 
 ### Soporte y servicios al cliente
 
 📞 **+86-22-83726972**  
 🌐 [www.sentinel-china.com](http://www.sentinel-china.com)
 
-Nuestro sitio web ofrece:
+<div style="text-align: justify;">Nuestro sitio web ofrece:
 - Información sobre productos  
 - Manuales de selección  
 - Archivos CAD y Eplan  
 - Guías de configuración y tutoriales  
 
-Nuestro equipo técnico brinda **soporte personalizado** y **servicio posventa eficiente**.
+Nuestro equipo técnico brinda **soporte personalizado** y **servicio posventa eficiente**.</div>
 
 ![SENTINEL QR Code](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
