--- a/src/pages/articles/markdown-news/3.it.md
+++ b/src/pages/articles/markdown-news/3.it.md
@@ -1,76 +1,76 @@
 ## Attrezzatura per la distillazione a pressione negativa nell'industria alimentare e farmaceutica
 
-Nella produzione moderna **alimentare** e **farmaceutica**, l'**attrezzatura per la distillazione a pressione negativa** è uno strumento chiave per l'elaborazione di materiali termosensibili, altamente volatili o ad alta purezza.
-A differenza della distillazione a pressione atmosferica, che può degradare la qualità del prodotto a causa delle alte temperature, la distillazione a pressione negativa consente un **elaborazione a bassa temperatura**, preservando i principi attivi e migliorando la purezza del prodotto.
+<div style="text-align: justify;">Nella produzione moderna **alimentare** e **farmaceutica**, l'**attrezzatura per la distillazione a pressione negativa** è uno strumento chiave per l'elaborazione di materiali termosensibili, altamente volatili o ad alta purezza.
+A differenza della distillazione a pressione atmosferica, che può degradare la qualità del prodotto a causa delle alte temperature, la distillazione a pressione negativa consente un **elaborazione a bassa temperatura**, preservando i principi attivi e migliorando la purezza del prodotto.</div>
 **Applicazioni:**
 - **Industria alimentare:** estrazione di oli essenziali, concentrazione di succhi, rimozione di umidità.
 - **Industria farmaceutica:** estrazione di principi attivi, separazione di impurità, concentrazione di soluzioni farmaceutiche.
 
-Esempio: Nell'estrazione di **fragranze naturali**, la distillazione a pressione negativa conserva l'aroma originale e i composti attivi. Nell'industria farmaceutica, il trattamento a bassa temperatura garantisce **efficacia** e **purezza** del farmaco.
+<div style="text-align: justify;">Esempio: Nell'estrazione di **fragranze naturali**, la distillazione a pressione negativa conserva l'aroma originale e i composti attivi. Nell'industria farmaceutica, il trattamento a bassa temperatura garantisce **efficacia** e **purezza** del farmaco.</div>
 
 ![Attrezzatura per la distillazione a pressione negativa](http://image.sentinel-china.com/202410242248851.png)
 
 ### Principio operativo della distillazione a pressione negativa
 
-La distillazione a pressione negativa diminuisce la pressione del sistema, consentendo ai liquidi di **evaporare al di sotto del loro punto di ebollizione normale**.
+<div style="text-align: justify;">La distillazione a pressione negativa diminuisce la pressione del sistema, consentendo ai liquidi di **evaporare al di sotto del loro punto di ebollizione normale**.
 
 **Passaggi del processo:**
 1. **Impostazione del sistema di vuoto** – La pompa a vuoto riduce la pressione a migliaia di Pascal o meno.
 2. **Riscaldamento del materiale** – I liquidi evaporano a una temperatura ridotta.
 3. **Condensazione del vapore** – Il gas evaporato viene raffreddato in un condensatore e convertito nuovamente in liquido.
-4. **Raccolta del prodotto** – Il liquido condensato viene raccolto, ottenendo una **separazione ad alta purezza**.
+4. **Raccolta del prodotto** – Il liquido condensato viene raccolto, ottenendo una **separazione ad alta purezza**.</div>
 
 ## Sensori di pressione — Il cuore della distillazione a pressione negativa
 
 ### Ruolo nel sistema
-I sensori di pressione garantiscono **condizioni di vuoto stabili**, che influenzano direttamente:
+<div style="text-align: justify;">I sensori di pressione garantiscono **condizioni di vuoto stabili**, che influenzano direttamente:
 - Efficienza della distillazione
 - Purezza del prodotto
 - Retenzione degli ingredienti attivi
 
-Anche minime fluttuazioni di pressione possono compromettere **il sapore degli alimenti** o **la qualità dei farmaci**.
+Anche minime fluttuazioni di pressione possono compromettere **il sapore degli alimenti** o **la qualità dei farmaci**.</div>
 
 ### Feedback in tempo reale sui dati
-Connettendosi a un sistema di controllo, i sensori di pressione:
+<div style="text-align: justify;">Connettendosi a un sistema di controllo, i sensori di pressione:
 - Regolano il funzionamento della pompa a vuoto
 - Mantenengono la pressione all'interno dell'intervallo target
 - Riducono i costi di manutenzione
-- Estendono la durata degli equipaggiamenti
+- Estendono la durata degli equipaggiamenti</div>
 
 ## Sensori di pressione negativa di grado alimentare e farmaceutico SENTINEL
 
 ![SENSORE DI PRESSIONE NEGATIVA SENTINEL](http://image.sentinel-china.com/1755451.png)
 
 ### Acciaio inox 316L per l'igiene
-- Alta resistenza alla corrosione  
+<div style="text-align: justify;">- Alta resistenza alla corrosione  
 - Proprietà antibatteriche  
-- Soddisfa **standard di igiene rigorosi** per la produzione alimentare e farmaceutica
+- Soddisfa **standard di igiene rigorosi** per la produzione alimentare e farmaceutica</div>
 
 ### Design compatto
-- Formato piccolo  
-- Facile integrazione in sistemi sia **a larga scala** che **a scala di laboratorio**
+<div style="text-align: justify;">- Formato piccolo  
+- Facile integrazione in sistemi sia **a larga scala** che **a scala di laboratorio**</div>
 
 ### IO-Link integrato
-- **Comunicazione bidirezionale** per dati in tempo reale, configurazione remota e diagnostica  
+<div style="text-align: justify;">- **Comunicazione bidirezionale** per dati in tempo reale, configurazione remota e diagnostica  
 - Abilita **monitoraggio intelligente** e **manutenzione predittiva**
-- Risposta più rapida e maggiore precisione rispetto ai sensori tradizionali
+- Risposta più rapida e maggiore precisione rispetto ai sensori tradizionali</div>
 
 ## Conclusione
 
-La distillazione a pressione negativa è essenziale nella produzione **alimentare** e **farmacologica**, e un **controllo preciso della pressione** è fondamentale.
-I sensori di pressione negativa SENTINEL combinano **precisione**, **design igienico** e **funzionalità intelligente**, offrendo una soluzione **economica** e **affidabile** per migliorare l'efficienza e mantenere un'elevata qualità del prodotto.
+<div style="text-align: justify;">La distillazione a pressione negativa è essenziale nella produzione **alimentare** e **farmacologica**, e un **controllo preciso della pressione** è fondamentale.
+I sensori di pressione negativa SENTINEL combinano **precisione**, **design igienico** e **funzionalità intelligente**, offrendo una soluzione **economica** e **affidabile** per migliorare l'efficienza e mantenere un'elevata qualità del prodotto.</div>
 
 ### Supporto e Servizi Clienti
 
 📞 **+86-22-83726972**  
 🌐 [www.sentinel-china.com](http://www.sentinel-china.com)
 
-Il nostro sito web offre:
+<div style="text-align: justify;">Il nostro sito web offre:
 - Informazioni sui prodotti
 - Manuali di selezione
 - File CAD e Eplan
 - Guide di configurazione e tutorial
 
-Il nostro team tecnico offre **supporto personalizzato** e **servizio post-vendita efficiente**.
+Il nostro team tecnico offre **supporto personalizzato** e **servizio post-vendita efficiente**.</div>
 
 ![SENTINEL QR Code](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
