--- a/src/pages/articles/markdown-news/3.zh.md
+++ b/src/pages/articles/markdown-news/3.zh.md
@@ -1,77 +1,77 @@
 ## 食品和制药行业中的负压蒸馏设备
 
-在现代**食品**和**制药**生产中，**负压蒸馏设备**是处理热敏性、高挥发性或高纯度物料的关键工具。
+<div style="text-align: justify;">在现代**食品**和**制药**生产中，**负压蒸馏设备**是处理热敏性、高挥发性或高纯度物料的关键工具。
 
-与可能因高温而降低产品质量的常压蒸馏不同，负压蒸馏能够实现**低温加工**，保留活性成分并提高产品纯度。
+与可能因高温而降低产品质量的常压蒸馏不同，负压蒸馏能够实现**低温加工**，保留活性成分并提高产品纯度。</div>
 
 **应用领域：**
 - **食品工业**：精油提取、果汁浓缩、脱水。
 - **制药工业**：活性成分提取、杂质分离、药液浓缩。
 
-示例：在**天然香料**提取中，负压蒸馏能保留原有的香气和活性化合物。在制药领域，低温加工可确保**药效**和**纯度**。
+<div style="text-align: justify;">示例：在**天然香料**提取中，负压蒸馏能保留原有的香气和活性化合物。在制药领域，低温加工可确保**药效**和**纯度**。</div>
 
 ![负压蒸馏设备](http://image.sentinel-china.com/202410242248851.png)
 
 ### 负压蒸馏的工作原理
 
-负压蒸馏降低系统压力，使液体能够在**其正常沸点以下蒸发**。
+<div style="text-align: justify;">负压蒸馏降低系统压力，使液体能够在**其正常沸点以下蒸发**。
 
 **工艺步骤：**
 1. **真空系统设置**——真空泵将压力降至数千帕或更低。
 2. **材料加热**——液体在较低温度下蒸发。
 3. **蒸汽冷凝**——蒸发的气体在冷凝器中冷却并转化回液体。
-4. **产品收集**——收集冷凝后的液体，实现**高纯度分离**。
+4. **产品收集**——收集冷凝后的液体，实现**高纯度分离**。</div>
 
 ## 压力传感器——负压蒸馏的核心
 
 ### 在系统中的作用
-压力传感器确保**稳定的真空条件**，这直接影响：
+<div style="text-align: justify;">压力传感器确保**稳定的真空条件**，这直接影响：
 - 蒸馏效率
 - 产品纯度
 - 活性成分保留
 
-即使是微小的压力波动也可能影响**食品风味**或**药品质量**。
+即使是微小的压力波动也可能影响**食品风味**或**药品质量**。</div>
 
 ### 实时数据反馈
-通过连接到控制系统，压力传感器能够：
+<div style="text-align: justify;">通过连接到控制系统，压力传感器能够：
 - 调整真空泵运行
 - 将压力维持在目标范围内
 - 降低维护成本
-- 延长设备使用寿命
+- 延长设备使用寿命</div>
 
 ## SENTINEL 食品级和医药级负压传感器
 
 ![SENTINEL 负压传感器](http://image.sentinel-china.com/202410251203279.png)
 
 ### 316L不锈钢，保障卫生安全
-- 高耐腐蚀性
+<div style="text-align: justify;">- 高耐腐蚀性
 - 抗菌特性
-- 符合食品和制药生产的**严格卫生标准**
+- 符合食品和制药生产的**严格卫生标准**</div>
 
 ### 紧凑设计
-- 小巧的外形尺寸
-- 易于集成到**大规模**和**实验室规模**的系统中
+<div style="text-align: justify;">- 小巧的外形尺寸
+- 易于集成到**大规模**和**实验室规模**的系统中</div>
 
 ### 集成IO-Link接口
-- 支持**双向通信**，可实现实时数据传输、远程配置和诊断
+<div style="text-align: justify;">- 支持**双向通信**，可实现实时数据传输、远程配置和诊断
 - 支持**智能监控**和**预测性维护**
-- 相比传统传感器，响应速度更快、精度更高
+- 相比传统传感器，响应速度更快、精度更高</div>
 
 ## 结论
 
-负压蒸馏在**食品**和**制药**生产中至关重要，而**精确的压力控制**则是关键。  
-SENTINEL的负压传感器集**高精度**、**卫生设计**和**智能功能**于一体，提供了一种**经济高效**且**可靠**的解决方案，有助于提高效率并保持高产品质量。
+<div style="text-align: justify;">负压蒸馏在**食品**和**制药**生产中至关重要，而**精确的压力控制**则是关键。  
+SENTINEL的负压传感器集**高精度**、**卫生设计**和**智能功能**于一体，提供了一种**经济高效**且**可靠**的解决方案，有助于提高效率并保持高产品质量。</div>
 
 ### 客户支持与服务
 
 📞 **+86-22-83726972**  
 🌐 [www.sentinel-china.com](http://www.sentinel-china.com)
 
-我们的网站提供：
+<div style="text-align: justify;">我们的网站提供：
 - 产品信息
 - 选型手册
 - CAD及Eplan文件
 - 配置指南和教程
 
-我们的技术团队提供**定制化支持**和**高效的售后服务**。
+我们的技术团队提供**定制化支持**和**高效的售后服务**。</div>
 ![SENTINEL QR Code](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
