--- a/src/pages/articles/markdown-news/4.zh.md
+++ b/src/pages/articles/markdown-news/4.zh.md
@@ -1,62 +1,62 @@
 ## 从“看表”到“看数据”的一条冷却支路改造
 ![](http://image.sentinel-china.com/202512122234820.png)
 
-在粉末冶金行业里，压力烧结炉往往是整条产线最贵、风险也最高的设备。大家谈论它时，习惯先看配方、升温曲线、真空度，很少把精力放在旁边那几根冷却水管上。某工厂这两年的经历，恰好说明了忽视冷却系统会带来怎样的麻烦。
+<div style="text-align: justify;">在粉末冶金行业里，压力烧结炉往往是整条产线最贵、风险也最高的设备。大家谈论它时，习惯先看配方、升温曲线、真空度，很少把精力放在旁边那几根冷却水管上。某工厂这两年的经历，恰好说明了忽视冷却系统会带来怎样的麻烦。</div>
 
-这台压力烧结炉在高负荷生产时，经常出现“过热保护”导致的停机。温度程序看起来满足配方要求，加热元件和真空系统也没有明显异常，但总是时不时跳停。维修人员一次次检查电热元件、功率控制器、温控参数，却始终找不到真正的“病根”，只能用换泵、清洗换热器、提前换滤芯等方式临时缓解。
+<div style="text-align: justify;">这台压力烧结炉在高负荷生产时，经常出现"过热保护"导致的停机。温度程序看起来满足配方要求，加热元件和真空系统也没有明显异常，但总是时不时跳停。维修人员一次次检查电热元件、功率控制器、温控参数，却始终找不到真正的"病根"，只能用换泵、清洗换热器、提前换滤芯等方式临时缓解。</div>
 
-直到一次检修窗口，团队才仔细审视冷却系统本身：冷却总管上只有一块指针式压力表，炉体进出水管上各一支玻璃温度计，水泵出口靠一个机械式压力开关做欠压联锁。平时几乎没人看这些表，事后也没有任何可供分析的历史曲线。车间负责人提出，希望在不大改 PLC 的前提下，把关键变量“看清楚”，并能和炉膛温度关联分析，于是有了这次基于 IO-Link 的小改造。
+<div style="text-align: justify;">直到一次检修窗口，团队才仔细审视冷却系统本身：冷却总管上只有一块指针式压力表，炉体进出水管上各一支玻璃温度计，水泵出口靠一个机械式压力开关做欠压联锁。平时几乎没人看这些表，事后也没有任何可供分析的历史曲线。车间负责人提出，希望在不大改 PLC 的前提下，把关键变量"看清楚"，并能和炉膛温度关联分析，于是有了这次基于 IO-Link 的小改造。</div>
 
 ## 项目思路：先把冷却这条“线”数字化
 ![](http://image.sentinel-china.com/202512122234664.png)
 
-工程师先将冷却系统抽象成一条简单的线：水泵抽水，经滤芯和板式换热器，进入炉体冷却夹套，再回到水箱或冷却塔。围绕这条线，最关键的是三个量：流量、压力和温度。
+<div style="text-align: justify;">工程师先将冷却系统抽象成一条简单的线：水泵抽水，经滤芯和板式换热器，进入炉体冷却夹套，再回到水箱或冷却塔。围绕这条线，最关键的是三个量：流量、压力和温度。</div>
 
-流量决定冷却能力的上限。流量不足时，局部温度抬升，炉体结构和密封件在看不到的地方不断积累热负荷。压力反映管路是否畅通，欠压往往意味着吸空、泄漏或阀门未开，缓慢升高则更可能是滤芯堵塞、换热器结垢。温度则衡量冷却效果本身：进水温度代表冷源品质，回水温度和进出水温差反映当前工况下带走了多少热量。
+<div style="text-align: justify;">流量决定冷却能力的上限。流量不足时，局部温度抬升，炉体结构和密封件在看不到的地方不断积累热负荷。压力反映管路是否畅通，欠压往往意味着吸空、泄漏或阀门未开，缓慢升高则更可能是滤芯堵塞、换热器结垢。温度则衡量冷却效果本身：进水温度代表冷源品质，回水温度和进出水温差反映当前工况下带走了多少热量。</div>
 
-改造的第一步，就是围绕这三个量，选择合适位置增加传感器，把冷却系统从“几块机械表”升级成“可追溯的数字通道”，再通过 IO-Link 接入现有控制系统。
+<div style="text-align: justify;">改造的第一步，就是围绕这三个量，选择合适位置增加传感器，把冷却系统从"几块机械表"升级成"可追溯的数字通道"，再通过 IO-Link 接入现有控制系统。</div>
 
 ## 冷却水侧实施：三类传感器的布置与接入
 ![](http://image.sentinel-china.com/202512122235108.png)
 
-在总管上，团队在水泵出口安装了一只过程压力传感器和一只涡街流量传感器，用来实时监测系统基础压力和总流量，替代原有的机械式压力开关。这样一来，任何一次负载变化、水泵性能衰减或阀门误操作，都会在趋势曲线上留下痕迹。
+<div style="text-align: justify;">在总管上，团队在水泵出口安装了一只过程压力传感器和一只涡街流量传感器，用来实时监测系统基础压力和总流量，替代原有的机械式压力开关。这样一来，任何一次负载变化、水泵性能衰减或阀门误操作，都会在趋势曲线上留下痕迹。</div>
 
-在进入炉体之前的支路上，工程师增加了一只流量开关和一支插入式温度传感器。流量开关负责本支路的低流量报警及联锁停炉，温度传感器监测进入炉体的冷却水温度，避免冷源温度悄悄偏高却无人察觉。在炉体回水管上，又布置了一支温度传感器，用于测量回水温度，与进水温度配对分析换热强度。
+<div style="text-align: justify;">在进入炉体之前的支路上，工程师增加了一只流量开关和一支插入式温度传感器。流量开关负责本支路的低流量报警及联锁停炉，温度传感器监测进入炉体的冷却水温度，避免冷源温度悄悄偏高却无人察觉。在炉体回水管上，又布置了一支温度传感器，用于测量回水温度，与进水温度配对分析换热强度。</div>
 
-这些新增的传感器统一采用 IO-Link 接口，通过一块 IO-Link 主站通过 PROFINET 协议向 PLC 提供数据。原有的机械压力开关则接入 IO-Link 子站的数字输入，保留原始安全链路。这样，冷却支路从泵出口到炉体回水，形成了一条连续的数字监测链路。
+<div style="text-align: justify;">这些新增的传感器统一采用 IO-Link 接口，通过一块 IO-Link 主站通过 PROFINET 协议向 PLC 提供数据。原有的机械压力开关则接入 IO-Link 子站的数字输入，保留原始安全链路。这样，冷却支路从泵出口到炉体回水，形成了一条连续的数字监测链路。</div>
 
 ## 炉膛侧实施：用 IO-Link 热电偶子站整理“温度地图”
 ![](http://image.sentinel-china.com/202512122235608.png)
 
-压力烧结炉内部原本布有十几支热电偶。工艺控制用的主控热电偶接到原厂温控机上，若干监测用热电偶分散接入 PLC 的热电偶模块。随着测点增多，控制柜内的补偿线和模块十分拥挤，扩展点数成本较高，参数维护也比较费力。
+<div style="text-align: justify;">压力烧结炉内部原本布有十几支热电偶。工艺控制用的主控热电偶接到原厂温控机上，若干监测用热电偶分散接入 PLC 的热电偶模块。随着测点增多，控制柜内的补偿线和模块十分拥挤，扩展点数成本较高，参数维护也比较费力。</div>
 
-此次改造引入了 IO-Link 热电偶子站，将所有监测用热电偶统一接入子站端子，由子站内部完成冷端补偿和线性化，再通过 IO-Link 主站把数字化的温度值送给 PLC。每个通道在工程软件中都有清晰的名称和量程配置，例如“三区监测 TC1”“炉顶监测 TC2”，同时可以设定滤波时间和报警阈值。
+<div style="text-align: justify;">此次改造引入了 IO-Link 热电偶子站，将所有监测用热电偶统一接入子站端子，由子站内部完成冷端补偿和线性化，再通过 IO-Link 主站把数字化的温度值送给 PLC。每个通道在工程软件中都有清晰的名称和量程配置，例如"三区监测 TC1""炉顶监测 TC2"，同时可以设定滤波时间和报警阈值。</div>
 
-这样做有三个直接好处。其一，大量补偿线被就近接入子站，控制柜内线缆和端子排得到大幅精简。其二，通道参数集中维护，今后复制到同型号设备时只需导入配置即可。其三，更换或新增热电偶时，只需在子站接线并启用通道，无需再扩展 PLC 模块。
+<div style="text-align: justify;">这样做有三个直接好处。其一，大量补偿线被就近接入子站，控制柜内线缆和端子排得到大幅精简。其二，通道参数集中维护，今后复制到同型号设备时只需导入配置即可。其三，更换或新增热电偶时，只需在子站接线并启用通道，无需再扩展 PLC 模块。
 
-更重要的是，当冷却水侧的流量、压力、温度和炉膛内部多点温度都通过 IO-Link 接入后，工程师可以在同一个画面上同时查看冷却状态曲线和炉温曲线，真正把“加热”和“冷却”放在一个逻辑闭环里分析。
+更重要的是，当冷却水侧的流量、压力、温度和炉膛内部多点温度都通过 IO-Link 接入后，工程师可以在同一个画面上同时查看冷却状态曲线和炉温曲线，真正把"加热"和"冷却"放在一个逻辑闭环里分析。</div>
 
 ## 运行效果：过热停机从“猜问题”变成“看趋势”
 ![](http://image.sentinel-china.com/202512122235177.png)
 
-改造完成后，车间对几次典型“过热”事件进行了对比分析。过去，只能看到某个加热区温度偏高或下降缓慢，工程师很难判断是加热侧、工艺参数还是冷却能力的问题；现在，通过历史曲线可以清楚看到事件发生前后的全貌。
+<div style="text-align: justify;">改造完成后，车间对几次典型"过热"事件进行了对比分析。过去，只能看到某个加热区温度偏高或下降缓慢，工程师很难判断是加热侧、工艺参数还是冷却能力的问题；现在，通过历史曲线可以清楚看到事件发生前后的全貌。</div>
 
-在一次保温阶段异常中，趋势曲线显示：某一段时间支路流量略有下降，回水温度持续偏高，滤芯前后压差缓慢抬升，同时该区域炉温下降变慢。基于这几条曲线，维护团队很快判断为“滤芯堵塞导致局部冷却不足”，停炉更换滤芯并对部分管路除垢后，后续同类问题明显减少。
+<div style="text-align: justify;">在一次保温阶段异常中，趋势曲线显示：某一段时间支路流量略有下降，回水温度持续偏高，滤芯前后压差缓慢抬升，同时该区域炉温下降变慢。基于这几条曲线，维护团队很快判断为"滤芯堵塞导致局部冷却不足"，停炉更换滤芯并对部分管路除垢后，后续同类问题明显减少。</div>
 
-冷却系统的维护策略也随之改变。过去滤芯更换主要靠经验和时间周期，现在则根据压差和流量的趋势，设置合理的预警阈值，做到“按状态维护”。工艺工程师在调试新产品时，也会有意识地观察不同工步中冷却条件的变化，避免在冷却能力边缘运行时安排对温度最敏感的工序。
+<div style="text-align: justify;">冷却系统的维护策略也随之改变。过去滤芯更换主要靠经验和时间周期，现在则根据压差和流量的趋势，设置合理的预警阈值，做到"按状态维护"。工艺工程师在调试新产品时，也会有意识地观察不同工步中冷却条件的变化，避免在冷却能力边缘运行时安排对温度最敏感的工序。</div>
 
-总体来看，这次改造并没有大动干戈，只是在关键位置增加了几只传感器和一块 IO-Link 热电偶子站，却让原本模糊的冷却系统和炉温关系变得可视、可分析、可追溯，极大提升了设备运行的可控性。
+<div style="text-align: justify;">总体来看，这次改造并没有大动干戈，只是在关键位置增加了几只传感器和一块 IO-Link 热电偶子站，却让原本模糊的冷却系统和炉温关系变得可视、可分析、可追溯，极大提升了设备运行的可控性。</div>
 
 ## 结语：从一条支路开始，把冷却纳入工艺管理
 
-这个项目的经验是，压力烧结炉的冷却系统完全值得被当成工艺的一部分来管理，而不是简单视作“只要不断水就行”的辅助设施。只要选好一条关键冷却支路，合理布置流量、压力和温度传感器，再配合 IO-Link 热电偶子站，将炉膛内部的多点温度纳入同一数据体系，就可以在不大改 PLC 架构的前提下，让设备从“看表靠经验”升级到“看数据做决策”。
+<div style="text-align: justify;">这个项目的经验是，压力烧结炉的冷却系统完全值得被当成工艺的一部分来管理，而不是简单视作"只要不断水就行"的辅助设施。只要选好一条关键冷却支路，合理布置流量、压力和温度传感器，再配合 IO-Link 热电偶子站，将炉膛内部的多点温度纳入同一数据体系，就可以在不大改 PLC 架构的前提下，让设备从"看表靠经验"升级到"看数据做决策"。</div>
 
-对于正在规划新炉或考虑冷却改造的工厂来说，不必一开始就追求“全覆盖”。从最关键的一条支路、几个传感器和一块 IO-Link 子站做起，先把一小段冷却系统真正看清楚，再逐步复制到整台设备甚至整个车间，既稳妥，又能持续看到收益。
+<div style="text-align: justify;">对于正在规划新炉或考虑冷却改造的工厂来说，不必一开始就追求"全覆盖"。从最关键的一条支路、几个传感器和一块 IO-Link 子站做起，先把一小段冷却系统真正看清楚，再逐步复制到整台设备甚至整个车间，既稳妥，又能持续看到收益。</div>
 
 ### 客户支持与服务
 
-如您想要了解森特奈产品的更多信息，请联系销售人员或致电公司 022-83726972。或您可登录森特奈的官网 www.sentinel-china.com 。官网提供了全面的产品信息、选型手册、CAD 和 Eplan 文件，以及配置文件和教程，确保用户能够轻松获取所需信息。
+<div style="text-align: justify;">如您想要了解森特奈产品的更多信息，请联系销售人员或致电公司 022-83726972。或您可登录森特奈的官网 www.sentinel-china.com 。官网提供了全面的产品信息、选型手册、CAD 和 Eplan 文件，以及配置文件和教程，确保用户能够轻松获取所需信息。
 
-我们拥有专业的技术团队，随时准备提供定制化的客户支持和高效的售后服务，确保每一位用户的利益得到最大化的保障。
+我们拥有专业的技术团队，随时准备提供定制化的客户支持和高效的售后服务，确保每一位用户的利益得到最大化的保障。</div>
 
 ![](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
