--- a/src/pages/articles/markdown-news/3.en.md
+++ b/src/pages/articles/markdown-news/3.en.md
@@ -1,77 +1,77 @@
 ## Negative Pressure Distillation Equipment in the Food and Pharmaceutical Industry
 
-In modern **food** and **pharmaceutical** production, **negative pressure distillation equipment** is a key tool for processing heat-sensitive, highly volatile, or high-purity materials.  
-Unlike atmospheric pressure distillation, which can degrade product quality due to high temperatures, negative pressure distillation enables **low-temperature processing**, preserving active ingredients and improving product purity.
+<div style="text-align: justify;">In modern **food** and **pharmaceutical** production, **negative pressure distillation equipment** is a key tool for processing heat-sensitive, highly volatile, or high-purity materials.  
+Unlike atmospheric pressure distillation, which can degrade product quality due to high temperatures, negative pressure distillation enables **low-temperature processing**, preserving active ingredients and improving product purity.</div>
 
 **Applications:**
 - **Food industry:** essential oil extraction, juice concentration, moisture removal.
 - **Pharmaceutical industry:** active ingredient extraction, impurity separation, drug solution concentration.
 
-Example: In **natural fragrance** extraction, negative pressure distillation preserves original aroma and active compounds. In pharmaceuticals, low-temperature processing ensures **drug efficacy** and **purity**.
+<div style="text-align: justify;">Example: In **natural fragrance** extraction, negative pressure distillation preserves original aroma and active compounds. In pharmaceuticals, low-temperature processing ensures **drug efficacy** and **purity**.</div>
 
 ![Negative Pressure Distillation Equipment](http://image.sentinel-china.com/202410242248851.png)
 
 ### Operating Principle of Negative Pressure Distillation
 
-Negative pressure distillation lowers system pressure, enabling liquids to **evaporate below their normal boiling point**.
+<div style="text-align: justify;">Negative pressure distillation lowers system pressure, enabling liquids to **evaporate below their normal boiling point**.
 
 **Process steps:**
 1. **Vacuum system setup** – Vacuum pump reduces pressure to thousands of Pascals or lower.  
 2. **Heating the material** – Liquids evaporate at a reduced temperature.  
 3. **Steam condensation** – Evaporated gas is cooled in a condenser and converted back to liquid.  
-4. **Product collection** – Condensed liquid is collected, yielding **high-purity separation**.
+4. **Product collection** – Condensed liquid is collected, yielding **high-purity separation**.</div>
 
 ## Pressure Sensors — The Core of Negative Pressure Distillation
 
 ### Role in the System
-Pressure sensors ensure **stable vacuum conditions**, which directly affect:
+<div style="text-align: justify;">Pressure sensors ensure **stable vacuum conditions**, which directly affect:
 - Distillation efficiency
 - Product purity
 - Active ingredient retention
 
-Even minor pressure fluctuations can compromise **food flavor** or **drug quality**.
+Even minor pressure fluctuations can compromise **food flavor** or **drug quality**.</div>
 
 ### Real-Time Data Feedback
-By connecting to a control system, pressure sensors:
+<div style="text-align: justify;">By connecting to a control system, pressure sensors:
 - Adjust vacuum pump operation
 - Maintain pressure within the target range
 - Reduce maintenance costs
-- Extend equipment lifespan
+- Extend equipment lifespan</div>
 
 ## SENTINEL Food- and Pharmaceutical-Grade Negative Pressure Sensors
 
 ![SENTINEL Negative Pressure Sensor](http://image.sentinel-china.com/1755451.png)
 
 ### 316L Stainless Steel for Hygiene
-- High corrosion resistance  
+<div style="text-align: justify;">- High corrosion resistance  
 - Antibacterial properties  
-- Meets **strict sanitation standards** for food and pharmaceutical production
+- Meets **strict sanitation standards** for food and pharmaceutical production</div>
 
 ### Compact Design
-- Small form factor  
-- Easy integration into both **large-scale** and **lab-scale** systems
+<div style="text-align: justify;">- Small form factor  
+- Easy integration into both **large-scale** and **lab-scale** systems</div>
 
 ### Integrated IO-Link
-- **Two-way communication** for real-time data, remote configuration, and diagnostics  
+<div style="text-align: justify;">- **Two-way communication** for real-time data, remote configuration, and diagnostics  
 - Enables **smart monitoring** and **predictive maintenance**
-- Faster response and higher accuracy than traditional sensors
+- Faster response and higher accuracy than traditional sensors</div>
 
 ## Conclusion
 
-Negative pressure distillation is essential in **food** and **pharmaceutical** production, and **precise pressure control** is critical.  
-SENTINEL’s negative pressure sensors combine **accuracy**, **hygienic design**, and **smart functionality**, offering a **cost-effective** and **reliable** solution to improve efficiency and maintain high product quality.
+<div style="text-align: justify;">Negative pressure distillation is essential in **food** and **pharmaceutical** production, and **precise pressure control** is critical.  
+SENTINEL’s negative pressure sensors combine **accuracy**, **hygienic design**, and **smart functionality**, offering a **cost-effective** and **reliable** solution to improve efficiency and maintain high product quality.</div>
 
 ### Customer Support & Services
 
 📞 **+86-22-83726972**  
 🌐 [www.sentinel-china.com](http://www.sentinel-china.com)
 
-Our website provides:
+<div style="text-align: justify;">Our website provides:
 - Product information  
 - Selection manuals  
 - CAD & Eplan files  
 - Configuration guides & tutorials  
 
-Our technical team offers **customized support** and **efficient after-sales service**.
+Our technical team offers **customized support** and **efficient after-sales service**.</div>
 
 ![SENTINEL QR Code](https://image.sentinel-china.com/2024-08-24-%E5%AE%98%E6%96%B9%E4%BA%8C%E7%BB%B4%E7%A0%81%E5%90%88%E9%9B%86.png)
